<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notelist.NoteListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@animator/selector_elev_ab"
        android:theme="@style/AppbarTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|snap"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb"
                tools:menu="@menu/menu_note_list_tb"
                tools:title="@string/title_activity_note_list"
                style="@style/Toolbar" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ab"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@drawable/ic_note"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/tv_empty_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_empty_title"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:text="@string/tv_note_list_empty_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            style="@style/TextView.Heading1" />

        <TextView
            android:id="@+id/tv_empty_message"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:textAlignment="center"
            android:text="@string/tv_note_list_empty_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_empty_title"
            style="@style/TextView.Body" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_diminutive"
        android:paddingVertical="@dimen/spacing_diminutive"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb"
        tools:context="com.felwal.markana.ui.notelist.NoteListActivity"
        tools:itemCount="2"
        tools:listitem="@layout/item_note" />

    <LinearLayout
        android:id="@+id/ll_fabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:paddingTop="@dimen/spacing_tiny"
        android:paddingBottom="@dimen/spacing_fab"
        android:paddingStart="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_fab"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:elevation="@dimen/elev_fabmenu"
        app:layout_constraintBottom_toBottomOf="@+id/cdl_main"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fabs_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_diminutive"
            android:paddingBottom="@dimen/spacing_small"
            android:paddingEnd="@dimen/spacing_diminutive"
            android:layout_gravity="end"
            android:visibility="gone"
            android:clipToPadding="false"
            tools:visibility="visible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_link"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_link"
                style="@style/Fab.Mini" />

            <TextView
                android:id="@+id/tv_fabs_link"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/tv_fab_link"
                app:layout_constraintBottom_toBottomOf="@+id/fab_link"
                app:layout_constraintEnd_toStartOf="@+id/fab_link"
                app:layout_constraintTop_toTopOf="@+id/fab_link"
                app:layout_constraintVertical_bias="0.4"
                style="@style/TextView.Body.FabTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fabs_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/spacing_diminutive"
            android:paddingBottom="@dimen/spacing_small"
            android:paddingEnd="@dimen/spacing_diminutive"
            android:layout_gravity="end"
            android:visibility="gone"
            android:clipToPadding="false"
            tools:visibility="visible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_create"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_create"
                style="@style/Fab.Mini" />

            <TextView
                android:id="@+id/tv_fabs_create"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="@string/tv_fab_create"
                app:layout_constraintBottom_toBottomOf="@+id/fab_create"
                app:layout_constraintEnd_toStartOf="@+id/fab_create"
                app:layout_constraintTop_toTopOf="@+id/fab_create"
                app:layout_constraintVertical_bias="0.4"
                style="@style/TextView.Body.FabTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_marginTop="@dimen/spacing_diminutive"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add"
            style="@style/Fab" />

    </LinearLayout>

    <View
        android:id="@+id/v_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.96"
        android:background="?android:attr/colorBackground"
        android:defaultFocusHighlightEnabled="false"
        android:elevation="@dimen/elev_overlay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>